[gd_scene load_steps=13 format=3 uid="uid://blmb50kvkrsn2"]

[ext_resource type="Script" path="res://Objects/plantation_edit.gd" id="1_qymb8"]
[ext_resource type="StyleBox" uid="uid://cc3y63knchcv3" path="res://Assets/Styles/white_back_blue_borders.tres" id="3_d1t2s"]
[ext_resource type="StyleBox" uid="uid://bv1o2ciq0ndps" path="res://Assets/Styles/white_back_red_borders.tres" id="4_p3ejf"]
[ext_resource type="Theme" uid="uid://2643a6p0thsb" path="res://Assets/Themes/option_menu_theme.tres" id="5_c3m2r"]
[ext_resource type="PackedScene" uid="uid://l68yt0p14fpf" path="res://Objects/cool_button.tscn" id="5_mv65n"]
[ext_resource type="StyleBox" uid="uid://c3nl2fr2yle2k" path="res://Assets/Styles/blue_button.tres" id="6_v734m"]
[ext_resource type="StyleBox" uid="uid://sj4sw626k6fa" path="res://Assets/Styles/hover_button.tres" id="7_2fn00"]
[ext_resource type="StyleBox" uid="uid://dd5xkjppnprpd" path="res://Assets/Styles/pressed_button.tres" id="8_3tv7g"]

[sub_resource type="LabelSettings" id="LabelSettings_mx0dn"]
font_size = 64
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pyd5b"]

[sub_resource type="LabelSettings" id="LabelSettings_1vfpl"]
font_size = 32
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xugni"]

[node name="PlantationEdit" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qymb8")

[node name="TreeNames" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 25

[node name="Label" type="Label" parent="TreeNames"]
layout_mode = 2
text = "Насаждения"
label_settings = SubResource("LabelSettings_mx0dn")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="TreeNames"]
layout_mode = 2
size_flags_vertical = 3

[node name="Options" type="VBoxContainer" parent="TreeNames/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 25

[node name="Editing" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
theme_override_constants/separation = 25

[node name="HSeparator" type="HSeparator" parent="Editing"]
layout_mode = 2
theme_override_constants/separation = 50
theme_override_styles/separator = SubResource("StyleBoxEmpty_pyd5b")

[node name="Label" type="Label" parent="Editing"]
layout_mode = 2
text = "Введите отредактированное значение"
label_settings = SubResource("LabelSettings_1vfpl")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="PlantEdit" type="TextEdit" parent="Editing"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("3_d1t2s")
theme_override_styles/focus = ExtResource("4_p3ejf")
wrap_mode = 1
scroll_fit_content_height = true
caret_blink = true

[node name="SubmitChange" parent="Editing" instance=ExtResource("5_mv65n")]
layout_mode = 2
text = "Изменить"

[node name="HSeparator2" type="HSeparator" parent="Editing"]
layout_mode = 2
theme_override_constants/separation = 50
theme_override_styles/separator = SubResource("StyleBoxEmpty_pyd5b")

[node name="Label3" type="Label" parent="Editing"]
layout_mode = 2
text = "Введите новое насаждение"
label_settings = SubResource("LabelSettings_1vfpl")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="AddNewPlant" type="TextEdit" parent="Editing"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("3_d1t2s")
theme_override_styles/focus = ExtResource("4_p3ejf")
wrap_mode = 1
scroll_fit_content_height = true
caret_blink = true

[node name="Label4" type="Label" parent="Editing"]
layout_mode = 2
text = "Выберите город"
label_settings = SubResource("LabelSettings_1vfpl")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="SelectedCity" type="OptionButton" parent="Editing"]
layout_mode = 2
theme = ExtResource("5_c3m2r")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_xugni")
theme_override_styles/normal = ExtResource("6_v734m")
theme_override_styles/hover = ExtResource("7_2fn00")
theme_override_styles/pressed = ExtResource("8_3tv7g")
item_count = 1
popup/item_0/text = "Саранск"
popup/item_0/id = 0

[node name="SubmitNewPlant" parent="Editing" instance=ExtResource("5_mv65n")]
layout_mode = 2
text = "Добавить новое насаждение"

[node name="HSeparator3" type="HSeparator" parent="Editing"]
layout_mode = 2
theme_override_constants/separation = 50
theme_override_styles/separator = SubResource("StyleBoxEmpty_pyd5b")

[node name="DeleteBtn" parent="Editing" instance=ExtResource("5_mv65n")]
layout_mode = 2
text = "Удалить насаждение"
